# machawai

./: .gitignore  README.md  requirements.txt  requirements_dev.txt  setup.cfg
src/machawai/: const.py  globals.py  processing.py  stats.py  tensile.py  utils.py
src/machawai/adapters/: internal.py  pytorch.py
src/machawai/ml/: data.py  transformer.py  utils.py
src/machawai/v2/: io.py
