[metadata]
name = MaChAwAI
version = 0.1.0
description = MaChAwAI project code base.
author = Davide Belfiori

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy
    openpyxl
    pandas
    plotly
python_requires= >=3.8
zip_safe=False

[options.packages.find]
where=src

[options.extras_require]
testing=
    pytest